--- a/Neo4jClient.AspNet.Identity/project.json
+++ b/Neo4jClient.AspNet.Identity/project.json
@@ -1,15 +1,12 @@
 {
-  "version": "0.1.4-alpha",
+  "version": "0.1.6-alpha",
   "description": "Neo4jClient.AspNet.Identity Class Library",
   "authors": [ "Miguel Freire" ],
-  "tags": [ "neo4j", "asp.net", "identity" ],
-  "projectUrl": "",
-  "licenseUrl": "",
   "frameworks": {
-    "net451": { }
+    "net451": {}
   },
   "dependencies": {
-    "Microsoft.AspNet.Identity": "3.0.0-rc1-final",
+    "Microsoft.AspNetCore.Identity": "1.0.0-rc2-final",
     "Neo4jClient": "1.1.0.37"
   }
 }
