Update to Net Core 1.0 RTM

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ Temporary Items
 artifacts
 /Neo4jClient.AspNet.Identity/project.lock.json
 /Neo4jClient.AspNet.Identity/global.json
+/**/bin
+/**/obj
